--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@supabase/supabase-js": "^2.45.6",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "nuxt": "^3.13.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@nuxtjs/supabase": "^1.4.1",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0"
   }
 }
