--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.5",
+    "@libsql/client": "^0.14.0",
     "@nuxt/icon": "^1.5.3",
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "^2.18.6",
     "@nuxt/ui-pro": "^1.4.3",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@prisma/adapter-libsql": "^6.3.0",
+    "@prisma/client": "^6.3.0",
+    "@prisma/nuxt": "^0.3.0",
     "@supabase/supabase-js": "^2.45.6",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
@@ -31,6 +35,10 @@
   "devDependencies": {
     "@nuxtjs/supabase": "^1.4.1",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.0",
+    "prisma": "^6.3.0",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   }
 }
